--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "import-articles",
-  "license": "GPL-3.0-only",
-  "homepage": "https://mediawiki.org/wiki/Extension:ImportArticles",
-  "authors": [
-    {
-      "name": "Kris Blair (Cblair91)",
-      "email": "admin@betadev.co.uk"
-    }
-  ],
-  "version": "1.0.3",
-  "scripts": {
-    "test": "grunt test",
-    "doc": "jsduck"
-  },
-  "devDependencies": {
-    "grunt": "1.0.1",
-    "grunt-banana-checker": "0.4.0",
-    "grunt-contrib-jshint": "0.11.2",
-    "grunt-jscs": "2.1.0",
-    "grunt-jsonlint": "1.1.0"
-  }
+	"private": true,
+	"name": "import-articles",
+	"license": "GPL-3.0-only",
+	"homepage": "https://mediawiki.org/wiki/Extension:ImportArticles",
+	"authors": [
+		{
+			"name": "Kris Blair (Cblair91)",
+			"email": "admin@betadev.co.uk"
+		}
+	],
+	"version": "1.0.3",
+	"scripts": {
+		"test": "grunt test",
+		"doc": "jsduck"
+	},
+	"devDependencies": {
+		"grunt": "1.3.0",
+		"grunt-banana-checker": "0.4.0",
+		"grunt-contrib-jshint": "0.11.2",
+		"grunt-jscs": "2.1.0",
+		"grunt-jsonlint": "1.1.0"
+	}
 }
