--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,9 @@
 		],
 		"test": [
 			"parallel-lint . --exclude vendor --exclude node_modules",
-			"phpcs -p -s",
+			"@phpcs",
 			"minus-x check ."
-		]
+		],
+		"phpcs": "phpcs -sp --cache"
 	}
 }
